--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".DeveloperInfo"
+            android:exported="false" />
+        <activity
+            android:name=".UserProfile"
+            android:exported="false" />
+        <activity
+            android:name=".Profile"
+            android:exported="false" />
+        <activity
+            android:name=".dialog_add_todo"
+            android:exported="false" />
+        <activity
+            android:name=".slide_in_up"
+            android:exported="false" />
+        <activity
             android:name=".ConfirmPassword"
             android:exported="false" />
         <activity
